--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Mon Site Vitrine</title>
+  <title>Seven Analytics</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <h1>Nom de la boutique</h1>
+    <h1>Seven. Learn.</h1>
     <nav>
       <a href="#about">À propos</a>
       <a href="#gallery">Galerie</a>
@@ -18,7 +18,7 @@
 
   <section class="hero">
     <h2>Bienvenue dans notre univers</h2>
-    <p>Bijoux artisanaux, élégance intemporelle.</p>
+    <p>Memorable learning experience.</p>
   </section>
 
   <section id="about">
