--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Dashboard Seven Learn</title>
-  <link rel="stylesheet" href="style.css" />
+ <link rel="stylesheet" href="Test_Seven/style.css" />
 </head>
 <body>
   <header class="header">
